# dbus_gobject

./: CMakeLists.txt  child.c  parent.c
include/: alxvmrexample.h  passwd_pam.h  passwdservice.h
source/: alxvmrexample.c  main  main.c  pam_helper  pam_helper.c  passwd_pam.c  passwdservice.c  passwduser.c  translate.c
